--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && ./node_modules/.bin/webpack",
+    "start": "./node_modules/.bin/webpack-dev-server",
+    "build": "rm -rf dist && ./node_modules/.bin/webpack  --config webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
